made changes to the css stylesheet

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,7 +151,7 @@ input, select, textarea {
 		font-family: "Merriweather", Georgia, serif;
 		font-weight: 300;
 		font-size: 1rem;
-		line-height: 2.375;
+		line-height: 2;
 	}
 
 	a {
@@ -185,7 +185,7 @@ input, select, textarea {
 		font-weight: 900;
 		line-height: 1.5;
 		letter-spacing: 0.075em;
-		text-transform: uppercase;
+		text-transform: none;
 		margin: 0 0 1rem 0;
 	}
 
@@ -213,7 +213,7 @@ input, select, textarea {
 	}
 
 	h4 {
-		font-size: 1rem;
+		font-size: 1.15rem;
 	}
 
 	h5 {
@@ -2087,7 +2087,7 @@ input, select, textarea {
 		padding: 0 2rem;
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		text-transform: none;
 		white-space: nowrap;
 	}
 
@@ -3030,7 +3030,7 @@ input, select, textarea {
 			line-height: 1.5;
 			padding: 0 0.75rem 0.75rem 0.75rem;
 			text-align: left;
-			text-transform: uppercase;
+			text-transform: none;
 		}
 
 			@media screen and (max-width: 980px) {
