Updated my website

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2997,7 +2997,7 @@ input, select, textarea {
 		}
 
 	header.major .date:before, header.major .date:after {
-		border-top-color: #eeeeee;
+		border-top-color: #dacccc;
 	}
 
 /* Table */
